--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@wdio/local-runner": "^8.38.0",
     "@wdio/mocha-framework": "^8.38.0",
     "@wdio/spec-reporter": "^8.38.0"
+  },
+  "dependencies": {
+    "inquirer": "^9.2.23"
   }
 }
